--- a/homeloan/angular.json
+++ b/homeloan/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["src/assets/main.js",
+                        "src/assets/main1.js"]
           },
           "configurations": {
             "production": {
